# cloudcost-intelligence

./: .env.example  .gitignore  METADATA_EXTRACTION.md  README.md  activate.ps1  agentic_clarification.py  api.py  app.py  cli.py  database_manager.py  evaluation.md  json_query_helpers.py  pyproject.toml  semantic_metadata.py  semantic_metadata_extracted.json  semantic_metadata_predefined.json  setup.py  test_date_between.py  test_dynamic_clarification_flow.py  test_dynamic_regions.py  test_fixes.py  test_resourcetype_fix.py  test_resourcetype_simple.py  test_sql_validation.py  test_suite.py  test_union_fix.py  text2sql_engine.py
mock_data_sets/: aws_cost_usage.csv
mock_data_sets/__MACOSX/: ._aws_cost_usage.csv  ._azure_cost_usage.csv
